developerProject/force-app/main/default/objects/Email__c/Email__c.object-meta.xml
<CustomObject>
    <label>Email</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>