developerProject/force-app/main/default/objects/Email__c/fields/Email_Object__c.field-meta.xml
<CustomField>
    <fullName>Email_Object__c</fullName>
    <label>Email_Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>